@@ -4,11 +4,14 @@ Hash: SHA256
 DIST raspberrypi-image-3.10.38_pre-r20140427.tar.xz 10834816 SHA256 9f00d57e4f14233329f713110991b62b3c4cb22ae5024e82dd4a6856b5667dc3 SHA512 d61c6698a4b52b77a2967ea80766519db84f61388e7e32018a3ceb5f77d8bbee24f409a79bbbfbdace2dc154d873e8a5498f3b957db836fef43f6688de84d95d WHIRLPOOL ba21788cc709e0b6e8c1f286c8e213fad6221b6ef97db6ea3e80cf08370998c0224b0272216685eabd5ff2efdaac72e256655b395a5e3f1e7a4fce6691cc2d8f
 DIST raspberrypi-image-3.12.36_pre-r20150206.tar.xz 11038896 SHA256 999db53f2b0293de377db5b4fbe00a3990a0e29f4eece1c145c2a921edbfddeb SHA512 c0254bb1da52651ef6d308b3204397c441f4bf8f6272cceefde0fa1e755397b252be55d2e7e397b352b319722d9195c0b9b7fed8ae301da4fa4c0d2c04618d7c WHIRLPOOL 20e0b529bcc01902ed453b8e6f0ae152a38e61ae6b07a95e398f830a98c8d199b574ca15b46728b683139a288a5f6eabcc8a08e75c007bd5a3e1fb53263c5d46
 DIST raspberrypi-image-3.18.10_pre-r20150330.tar.xz 12976572 SHA256 ea35d0a90b06951e5919ec5a5918291e1ad1c26fb486b103b4be6f6232126556 SHA512 4a9f3ea141a4135d890d6e52867f533293f9ec9237f5be370674599f17cf4edc626ab38de5e493ae0b013e8768eaf5126b2e18662e40cb5cd4587b49ffe8547a WHIRLPOOL a88dcefdd785a68f88f8d882f7e516eb857670dae11150f2000551f9adb316b35cf17f584bce228602e5a518cbbc46c81c65e74d738cf1b5b0c24e95c26e373b
+DIST raspberrypi-image-3.18.14_pre-r20150520.tar.xz 12998340 SHA256 f7d5400f06314cc174b3ff5ad57ac75bdff9d63c7a6aededfcc149bff4540eb6 SHA512 3e7721a207ea7f88e5e68af471c76948b68c1a92acb974a648b5e3ef911c63caa96646cb556323975cfce845576546812ef508bd711e674c3e0d98959e2010aa WHIRLPOOL 5bd3aa413d2f8a97ecce867780fe3a05eb28337e818335d26993db2fbabde78f9a3f64f37fe769dc1d9a73df908da473f6f61520cff40ee27edcec4464b6a1aa
 DIST raspberrypi-image-3.19.3_pre-r20150327.tar.xz 12973956 SHA256 c1025b57a2423a1c2d98c136a5e332139a6734b2ddb3a605526c62d51ba1000d SHA512 5293ff2b75dc6f38f0e4dea5bb8322fdae9a799a1dc2e7f9791d8383e70e2ed39131a8e211514f74d72266b2570c8707abb735905a97f0ecf1c4ca595ac99fd6 WHIRLPOOL 0ef71e26e52014e4fba91edad94fb8bda315ecddf16108c713c4a2303e8a61de2df5626d41c2b45f7b7812252893d74fbb86c28ae1f85eb0441746924598ec93
+DIST raspberrypi-image-3.19.3_pre-r20150413.tar.xz 12976080 SHA256 e7cca8243839e80a6fe358c57289ba8c149bdd38e4f2e6a10c8d6f31b8da3743 SHA512 141e245273713f95f85c0c474fd0aaf9b01b67c412574756f6cf4d820013706160b872f0435fa139c96110c8a6b0f2d9b68f71e31ddf05964cb6fcf7014a960a WHIRLPOOL 3fe2fa6fb2284bd155458ee201130a9b3d6dc69a76033c6512f30963e3d379bbcc68e2701e8d60b88827fdbb498048934de624a0b859d468ad4b03f425679497
+DIST raspberrypi-image-4.0.4_pre-r20150523.tar.xz 13052304 SHA256 3cbe55ffccb6e7067f37b57a3bbcc7676ed89ae639f8663e17c94f0c8ec99d31 SHA512 c33517321769e5267d7084e82b54d9548bed77fed1755fd5985ac648cb5721fc462f2c062d0e003171eb4b0ccd3e5b0d7b41fc6783c6dd85f86089f54d8bbe60 WHIRLPOOL ef9359919e3da0de0edce3bacc16c70cb36fa66dc13051bde8c4dcb7c47782cd18fe8ed65ff992ae00454b109293ecbee4d71699adc78a7d17e903d1e91cd603
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlUcDq0ACgkQknrdDGLu8JA6BQD/cncVgvyYtB7ZejOQytFbmL6/
-F9yGQixgAL47qk+QTKAA/3KCxOlCoSQ9rKtkUF4IW/h8qj848BM8Zpbl+SJR9IC9
-=kXGJ
+iF4EAREIAAYFAlVjo9cACgkQknrdDGLu8JBf2AEAivlbx1K+i1prPWe8qw3G7W/U
+KXN/oSko2wxEt0XSQ8wA/02PylrHx6WsS/682RTjnhiS4htKjSUQD5LDh7BPjCeH
+=lq9i
 -----END PGP SIGNATURE-----
