@@ -1,3 +1,13 @@
+*raspberrypi-image-3.18.14_pre-r20150520 (25 May 2015)
+*raspberrypi-image-3.19.3_pre-r20150413 (25 May 2015)
+*raspberrypi-image-4.0.4_pre-r20150523 (25 May 2015)
+
+  25 May 2015; Michael Weber <xmw@gentoo.org>
+  +raspberrypi-image-3.18.14_pre-r20150520.ebuild,
+  +raspberrypi-image-3.19.3_pre-r20150413.ebuild,
+  +raspberrypi-image-4.0.4_pre-r20150523.ebuild:
+  Version bumps
+
 *raspberrypi-image-3.10.38_pre-r20140427 (01 Apr 2015)
 
   01 Apr 2015; Michael Weber <xmw@gentoo.org>
